# TextEditor

./: .gitignore  CMakeLists.txt  editor.cpp  editor.h  gapBuffer.cpp  gapBuffer.h  main.cpp  terminal.cpp  terminal.h
